# Rust-API-for-DevSecOps-Lab

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
migrations/: 001_initial_schema.sql
src/: app_state.rs  config.rs  errors.rs  handlers.rs  lib.rs  main.rs  middleware_auth.rs  models.rs  utils.rs
tests/: behavior.rs
