[package]
name = "library-api"
version = "0.2.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros", "json", "multipart"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "fs", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "compression-full", "request-id", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.20", features = ["derive"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }

sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }

argon2 = "0.5"

jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }

dotenvy = "0.15"
thiserror = "2.0"
anyhow = "1.0"

reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

governor = { version = "0.7", features = ["std", "dashmap"] }

mime_guess = "2.0"
tokio-util = "0.7"

# For graceful shutdown, etc.
signal-hook = "0.3"

[dev-dependencies]
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }

[profile.release]
lto = true
